--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@material-table/core": "^6.4.4",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.16.0",
     "@mui/x-data-grid": "^6.19.4",
