--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-spring": "^9.7.3",
     "react-table": "^7.8.0",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
